2013-08-06  Charlie Zender  <zender@uci.edu>

	* Integrate Wenshan's CMIP5 documentation into nco.texi

	* Add missing semi-colon to nco_mmr.c line 520 so Cygwin can build

	* Tweak attribute indentation with -5 printing and prn_flg->trd

2013-08-05  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.5 release procedure:
 	Changes since nco-4_3_4: fxm
	cd ~/nco;cvs tag -d ncoa-4_3_5;cvs tag -d nco-4_3_5-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.5 release"
	cvs tag -c nco-4_3_5;cvs tag -c nco-4_3_5-1

	* Add g3 and g5 to mimic CMIP5 problems in in_grp.cdl

2013-08-02  Charlie Zender  <zender@uci.edu>

	* Compound dimension functionality

2013-08-01  Charlie Zender  <zender@uci.edu>

	* Add stubs for printing braces for compound variables

	* Document ncrename -g

	* Document ncks -5 option for PRN_NEW_FORMAT

	* FC19 will not build current nco.texi, but Ubuntu will. Not sure why.
	Until fixing this, all documentation must be built on Ubuntu.

2013-07-31  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.4 release procedure:
 	Changes since nco-4_3_3: CDL legibility, ncpdq -U fix, --hdf_upk
	cd ~/nco;cvs tag -d nco-4_3_4;cvs tag -d nco-4_3_4-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.4 release"
	cvs tag -c nco-4_3_4;cvs tag -c nco-4_3_4-1

	* Document and test --hdf_upk in all other applicable operators

	* Add ncpdq regression test to re-pack 1D variable from HDF convention to netCDF convention

	* Move header information from nco_netcdf.c to nco_netcdf.h

	* Tidy UDUnits parsing/handling code

	* Standardize UDUnits code on opaque return values, not shell return values

2013-07-29  Charlie Zender  <zender@uci.edu>

	* ncpdq unpacking is broken in 4.3.2-4.3.3 because packing attributes are still written

	* Explode CDL printing of NC_CHAR attributes that contain embedded newlines

	* --hdf_upk flag uses HDF unpack convention: unpacked=scale_factor*(packed-add_offset)

2013-07-26  Charlie Zender  <zender@uci.edu>
