@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/ncks.c,v 1.649 2013-08-02 19:52:33 zender Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/ncks.c,v 1.650 2013-08-07 16:16:32 zender Exp $ */
 
 /* ncks -- netCDF Kitchen Sink */
 
@@ -147,12 +147,13 @@ main(int argc,char **argv)
   char *opt_crr=NULL; /* [sng] String representation of current long-option name */
   char *optarg_lcl=NULL; /* [sng] Local copy of system optarg */
   char *rec_dmn_nm=NULL; /* [sng] Record dimension name */
+  char *smr_sng=NULL; /* [sng] File summary string */
   char *sng_cnv_rcd=NULL_CEWI; /* [sng] strtol()/strtoul() return code */
 
   char trv_pth[]="/"; /* [sng] Root path of traversal tree */
 
-  const char * const CVS_Id="$Id: ncks.c,v 1.649 2013-08-02 19:52:33 zender Exp $"; 
-  const char * const CVS_Revision="$Revision: 1.649 $";
+  const char * const CVS_Id="$Id: ncks.c,v 1.650 2013-08-07 16:16:32 zender Exp $"; 
+  const char * const CVS_Revision="$Revision: 1.650 $";
   const char * const opt_sht_lst="3456aABb:CcD:d:FG:g:HhL:l:MmOo:Pp:qQrRs:uv:X:xz-:";
 
   cnk_sct **cnk=NULL_CEWI;
@@ -816,7 +817,7 @@ main(int argc,char **argv)
     prn_flg.cdl=PRN_CDL;
     prn_flg.xml=PRN_XML;
     prn_flg.trd=!(PRN_CDL || PRN_XML);
-    if(prn_flg.cdl && dbg_lvl > nco_dbg_std) prn_flg.nfo_cdl=True; else prn_flg.nfo_cdl=False;
+    if(prn_flg.cdl && dbg_lvl >= nco_dbg_std) prn_flg.nfo_cdl=True; else prn_flg.nfo_cdl=False;
     prn_flg.new_fmt=(PRN_CDL || PRN_XML || PRN_NEW_FMT);
     /* CDL must print filename stub */
     if(prn_flg.cdl || prn_flg.xml){
@@ -839,7 +840,7 @@ main(int argc,char **argv)
     prn_flg.sxn_fst=2;
     prn_flg.var_fst=2;
     prn_flg.tab=4;
-    prn_flg.fll_pth=False;
+    if(dbg_lvl >= nco_dbg_scl) prn_flg.fll_pth=True; else prn_flg.fll_pth=False;
     prn_flg.nwl_pst_val=True;
     prn_flg.dlm_sng=dlm_sng;
     prn_flg.ALPHA_BY_FULL_GROUP=ALPHA_BY_FULL_GROUP;
@@ -862,7 +863,11 @@ main(int argc,char **argv)
     } /* endif */
 
     /* File summary */
-    if(PRN_GLB_METADATA && !prn_flg.cdl && !prn_flg.xml) (void)fprintf(stdout,"Summary of %s: filetype = %s, %i groups (max. depth = %i), %i dimensions (%i fixed, %i record), %i variables (%i atomic-type, %i non-atomic), %i attributes (%i global, %i group, %i variable)\n",fl_in,nco_fmt_sng(fl_in_fmt),grp_nbr_fl,grp_dpt_fl,trv_tbl->nbr_dmn,trv_tbl->nbr_dmn-dmn_rec_fl,dmn_rec_fl,var_nbr_fl+var_ntm_fl,var_nbr_fl,var_ntm_fl,att_glb_nbr+att_grp_nbr+att_var_nbr,att_glb_nbr,att_grp_nbr,att_var_nbr);
+    if(PRN_GLB_METADATA){
+      prn_flg.smr_sng=smr_sng=(char *)nco_malloc(300*sizeof(char)); /* [sng] File summary string */
+      (void)sprintf(smr_sng,"Summary of %s: filetype = %s, %i groups (max. depth = %i), %i dimensions (%i fixed, %i record), %i variables (%i atomic-type, %i non-atomic), %i attributes (%i global, %i group, %i variable)\n",fl_in,nco_fmt_sng(fl_in_fmt),grp_nbr_fl,grp_dpt_fl,trv_tbl->nbr_dmn,trv_tbl->nbr_dmn-dmn_rec_fl,dmn_rec_fl,var_nbr_fl+var_ntm_fl,var_nbr_fl,var_ntm_fl,att_glb_nbr+att_grp_nbr+att_var_nbr,att_glb_nbr,att_grp_nbr,att_var_nbr);
+      if(!prn_flg.cdl && !prn_flg.xml) (void)fprintf(stdout,smr_sng);
+    } /* endif summary */
 
     if(!prn_flg.new_fmt){
       
@@ -961,6 +966,7 @@ main(int argc,char **argv)
     trv_tbl_free(trv_tbl);
     if(gpe) gpe=(gpe_sct *)nco_gpe_free(gpe);
     if(md5) md5=(md5_sct *)nco_md5_free(md5);
+    if(smr_sng) smr_sng=(char *)nco_free(smr_sng);
   } /* !flg_cln */
   
   if(dbg_lvl_get() == 14 && fl_out){
